# -live-video-chat-room

./: README.md
client/jsc_lv/: CCFeCatEx.sln  (+19 more)
client/jsc_lv/opal/: ChangeLog-opal-v3_0_2.txt  ChangeLog-opal-v3_1_2.txt  ChangeLog-opal-v3_2_0.txt  ChangeLog-opal-v3_2_1.txt  ChangeLog-opal-v3_2_2.txt  ChangeLog-opal-v3_3_0.txt  ChangeLog-opal-v3_3_1.txt  ChangeLog-opal-v3_4_0.txt  ChangeLog-opal-v3_4_1.txt  ChangeLog-opal-v3_4_2.txt  ChangeLog-opal-v3_5_0.txt  ChangeLog-opal-v3_8_0.txt  ChangeLog_SF.txt  Makefile  Makefile.in  buildopts.h  configure  configure.ac  opal.dsw  opal.dxy  opal.m4  opal.pc  opal.pc.in  opal.spec  opal.spec.in  opal_2003.sln  opal_2005.sln  opal_2008.sln  opal_cfg.dxy  opal_cfg.dxy.in  opal_defs.mak  opal_defs.mak.in  opal_inc.mak  opal_samples_2003.sln  opal_samples_2005.sln  opal_samples_2008.sln  opalce.vcp  opalce.vcw  src.rar  version.h
client/jsc_lv/opal/docs/: Overview.htm
client/jsc_lv/opal/include/: --inttypes.h  buildopts.h  opal.h
client/jsc_lv/opal/include/asn/: gcc.h  h225.h  h235.h  h235_srtp.h  h245.h  h248.h  h4501.h  h45010.h  h45011.h  h4502.h  h4503.h  h4504.h  h4505.h  h4506.h  h4507.h  h4508.h  h4509.h  h501.h  mcs.h  t38.h  x880.h
client/jsc_lv/opal/include/codec/: echocancel.h  g711a1_plc.h  g711codec.h  opalplugin.h  opalpluginmgr.h  opalwavfile.h  ratectl.h  rfc2833.h  rfc4175.h  silencedetect.h  vidcodec.h
client/jsc_lv/opal/include/h224/: h224.h  h224handler.h  h281.h  h281handler.h  h323h224.h  q922.h
client/jsc_lv/opal/include/h323/: channels.h  gkclient.h  gkserver.h  h225ras.h  h235auth.h  h323.h  h323annexg.h  h323caps.h  h323con.h  h323ep.h  h323neg.h  h323pdu.h  h323rtp.h  h323trans.h  h450pdu.h  h501pdu.h  peclient.h  q931.h  svcctrl.h  transaddr.h
client/jsc_lv/opal/include/h460/: h460.h  h4601.h  h46018.h  h46019.h  h4609.h  h460p.h  h460pres.h  h460tm.h
client/jsc_lv/opal/include/iax2/: callprocessor.h  causecode.h  frame.h  iax2.h  iax2con.h  iax2ep.h  iax2jitter.h  iax2medstrm.h  iedata.h  ies.h  overview.h  processor.h  receiver.h  regprocessor.h  remote.h  safestrings.h  sound.h  specialprocessor.h  transmit.h  version.h
client/jsc_lv/opal/include/im/: im.h  msrp.h  rfc4103.h  sipim.h  t140.h
client/jsc_lv/opal/include/lids/: lid.h  lidep.h  lidplugin.h  lidpluginmgr.h
client/jsc_lv/opal/include/opal/: audiorecord.h  buildopts - Copy (2).h  buildopts.h  buildopts.h.in  call.h  connection.h  endpoint.h  guid.h  ivr.h  localep.h  manager.h  mediacmd.h  mediafmt.h  mediastrm.h  mediatype.h  opalmixer.h  opalvxml.h  patch.h  pcss.h  pres_ent.h  recording.h  rtpconn.h  rtpep.h  transcoders.h  transports.h
client/jsc_lv/opal/include/rtp/: jitter.h  rtp.h  srtp.h  zrtpudp.h
client/jsc_lv/opal/include/sip/: handlers.h  handlers.h.bak  sdp.h  sdp.h.bak  sip.h  sipcon.h  sipcon.h.bak  sipep.h  sipep.h.bak  sippdu.h  sippdu.h.bak  sippres.h
client/jsc_lv/opal/include/t120/: h323t120.h  t120proto.h  x224.h
client/jsc_lv/opal/include/t38/: h323t38.h  sipt38.h  t38proto.h
client/jsc_lv/opal/include/zrtp/: opalzrtp.h  zrtpeventproc.h
client/jsc_lv/opal/plugins/: Installer_2003.vdproj  Installer_2005.vdproj  Makefile.in  aclocal.m4  configure  configure.ac  plugin-config.h  plugin-config.h.in  plugins_2003.sln  plugins_2005.sln  plugins_2008.sln
client/jsc_lv/opal/plugins/Debug/: h264-x264-noexe-new_pwplugin.idb  x264 H.264 Video Codec no exe new ffmpeg.lib  x264 h.264 video codec no exe new ffmpeg.idb
client/jsc_lv/opal/samples/: configure  configure.ac  opal_samples.mak.in
client/jsc_lv/opal/samples/c_api/: Makefile  c_api_2003.vcproj  c_api_2005.vcproj  c_api_2008.vcproj  main.c
client/jsc_lv/opal/samples/callgen/: Makefile  callgen_2003.vcproj  callgen_2005.vcproj  callgen_2008.vcproj  main.cxx  main.h  precompile.cxx  precompile.h  version.h
client/jsc_lv/opal/samples/codectest/: Makefile  codectest_2003.vcproj  codectest_2005.vcproj  codectest_2008.vcproj  main.cxx  main.h  precompile.cxx  precompile.h
client/jsc_lv/opal/samples/faxopal/: FaxOPAL_2003.vcproj  FaxOPAL_2005.vcproj  FaxOPAL_2008.vcproj  Makefile  main.cxx  main.h  precompile.cxx  precompile.h
client/jsc_lv/opal/samples/ivropal/: IvrOPAL_2003.vcproj  IvrOPAL_2005.vcproj  IvrOPAL_2008.vcproj  Makefile  main.cxx  main.h  precompile.cxx  precompile.h
client/jsc_lv/opal/samples/jester/: Makefile  jester.dsp  jester.dsw  jester.vcproj  jester_2005.vcproj  jester_2008.vcproj  main.cxx  main.h  precompile.cxx
client/jsc_lv/opal/samples/lidtest/: Makefile  lidtest_2003.vcproj  lidtest_2005.vcproj  lidtest_2008.vcproj  main.cxx
client/jsc_lv/opal/samples/mfc/: StdAfx.cpp  StdAfx.h  mfc.cpp  mfc.dsp  mfc.dsw  mfc.h  mfc.rc  mfc.vcproj  mfcDlg.cpp  mfcDlg.h  mfcEndPoint.cpp  mfcEndPoint.h  mfc_2005.vcproj  mfc_2008.vcproj  resource.h
client/jsc_lv/opal/samples/mobileopal/: MobileOPAL.cpp  MobileOPAL.h  MobileOPAL.sln  MobileOPAL.vcproj  MobileOPALppc.rc  MobileOPALsp.rc  MobileOpalDlg.cpp  MobileOpalDlg.h  OptionsGeneral.cpp  OptionsGeneral.h  OptionsH323.cpp  OptionsH323.h  OptionsSIP.cpp  OptionsSIP.h  Resourcesp.h  resourceppc.h  stdafx.cpp  stdafx.h
client/jsc_lv/opal/samples/opalcodecinfo/: Makefile  main.cxx  opalcodecinfo.dsp  opalcodecinfo.dsw  opalcodecinfo.vcproj  opalcodecinfo_2005.vcproj  opalcodecinfo_2008.vcproj
client/jsc_lv/opal/samples/opalgw/: Makefile  custom.cxx  custom.h  gkserv.cxx  main.cxx  main.h  opalgw.dsp  opalgw.dsw  opalgw.vcproj  opalgw_2005.vcproj  opalgw_2008.vcproj  precompile.cxx  precompile.h  svcproc.rc  version.h
client/jsc_lv/opal/samples/openphone/: Makefile  OPAL Web Site.url  OpenPhone.dsp  OpenPhone.dsw  OpenPhone.vcproj  OpenPhoneInstaller_2005.vdproj  OpenPhone_2005.sln  OpenPhone_2005.vcproj  OpenPhone_2008.vcproj  ReadMe.txt  Uninstall.bat  Vox Gratia Web Site.url  h323phone.xpm  main.cxx  main.h  openphone.rc  openphone.wxg  openphone.xpm  openphone.xrc  otherphone.xpm  sipphone.xpm  smallphone.xpm  version.h
client/jsc_lv/opal/samples/playrtp/: Makefile  main.cxx  main.h  playrtp_2003.vcproj  playrtp_2005.vcproj  playrtp_2008.vcproj  precompile.cxx  precompile.h
(+2040 files in other folders)
